# nfc_reader

./: README.md  pyproject.toml  read-card.py  usb-nembed-write.py  usb-test.py
